--- a/cookbooks/chef-client/files/default/chef-client.rc
+++ b/cookbooks/chef-client/files/default/chef-client.rc
@@ -1,32 +1,57 @@
 #!/bin/sh
+#
+# $FreeBSD: head/sysutils/rubygem-chef/files/chef_client.in 340872 2014-01-24 00:14:07Z mat $
+#
 
-# $FreeBSD$
-#
-# PROVIDE: chef
-# REQUIRE: LOGIN
+# PROVIDE: chef_client
+# REQUIRE: DAEMON
+# BEFORE: LOGIN
 # KEYWORD: shutdown
+
+# Add the following line to /etc/rc.conf to enable chef-client
 #
-# Add the following lines to /etc/rc.conf.local or /etc/rc.conf
-# to enable this service:
-#
-# chef_enable (bool):Set to NO by default.
-#Set it to YES to enable chef-client.
-# chef_config (path):Set to /root/.chef/client.rb
-#by default.
+#  chef_client_enable="YES"
 
 . /etc/rc.subr
 
-name=chef
-rcvar=chef_enable
+name="chef_client"
+rcvar=chef_client_enable
+
+# Read configuration and set defaults
+load_rc_config $name
+: ${chef_client_enable="NO"}
+: ${chef_client_configfile="/root/.chef/client.rb"}
+: ${chef_client_interval="600"}
+: ${chef_client_splay="0"}
+: ${chef_client_logfile="/var/log/chef/client.log"}
+: ${chef_client_loglevel="info"}
+
+if [ -f "$chef_client_configfile" ]
+        then
+                pidfile=`awk '/^[ \t]*pid_file[ \t]+/ { print $2 }' ${chef_client_configfile}`
+                : ${chef_client_pidfile=$pidfile}
+        else
+                : ${chef_client_pidfile="/var/run/chef-client.pid"}
+fi
+
+if [ -n "$chef_client_nodename" ]
+        then
+                nodename="-N ${chef_client_nodename}"
+        else
+                nodename=""
+fi
+
+if [ -n "$chef_client_server" ]
+        then
+                server="-N ${chef_client_server}"
+        else
+                server=""
+fi
+
+command="/usr/local/bin/chef-client"
+command_interpreter="/usr/local/bin/ruby21"
+pidfile=${chef_client_pidfile}
+chef_client_flags="-c ${chef_client_configfile} ${nodename}${server}-d -i ${chef_client_interval} -s ${chef_client_splay} -L ${chef_client_logfile} -l ${chef_client_loglevel} -P ${chef_client_pidfile}"
 
 load_rc_config $name
-
-: ${chef_enable:="NO"}
-: ${chef_config="/root/.chef/client.rb"}
-
-pidfile=/var/run/${name}.pid
-
-command="/usr/local/bin/${name}-client"
-command_args="-d -i 600 -s 60 -P $pidfile -c $chef_config"
-
 run_rc_command "$1"
